--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "config-lite": "2.0.0",
-    "express": "4.15.3"
+    "express": "4.15.3",
+    "http-proxy": "1.16.2",
+    "colors": "1.1.2"
   }
 }
