--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "colors": "1.1.2",
     "express": "4.15.3",
-    "node-mitmproxy": "3.1.0"
+    "formidable": "^1.1.1",
+    "node-mitmproxy": "3.1.0",
+    "querystring": "^0.2.0"
   }
 }
